--- a/B&G.html
+++ b/B&G.html
@@ -16,16 +16,22 @@
 
   <div class="sidenav">
         <h5>Family of Macaw's</h5>
-        <ul class="sidebarnav">
-        <li><a href="B&G.html">Blue &amp; Gold Macaw</a></li>
-        <li><a href="https://lafeber.com/pet-birds/species/green-winged-macaw/" target="blank">Green Winged Macaw</a></li>
-        <li><a href="https://lafeber.com/pet-birds/species/hahns-macaw/" target="blank">Hahn's Macaw</a></li>
-        <li><a href="https://lafeber.com/pet-birds/species/hyacinth-macaw/" target="blank">Hyacinth Macaw</a></li>
-        <li><a href="https://lafeber.com/pet-birds/species/scarlet-macaw/" target="blank">Scarlet Macaw</a></li>
+        <ul class="sidebarnav nav-tabs nav-justified">
+        <li class="nav-item"><a class="nav-link" href="B&G.html">Blue &amp; Gold Macaw</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://lafeber.com/pet-birds/species/green-winged-macaw/" target="blank">Green Winged Macaw</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://lafeber.com/pet-birds/species/hahns-macaw/" target="blank">Hahn's Macaw</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://lafeber.com/pet-birds/species/hyacinth-macaw/" target="blank">Hyacinth Macaw</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://lafeber.com/pet-birds/species/scarlet-macaw/" target="blank">Scarlet Macaw</a></li>
         </ul>
-      </div>
+    
 
-</html>   
+            <!--allows for mobile view -->
+            <span class="mobileToggle" onclick="myFunction(this)">
+                    <div class="menu bar1"></div>
+                    <div class="menu bar2"></div>
+                    <div class="menu bar3"></div> 
+            </span>  
+        </div>
 
 
   <body>
@@ -109,6 +115,7 @@
         
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="MacawJS.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
