--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="sidebarnav nav-tabs nav-justified">
             <li class="h5">Family of Macaw's</li>
              
-            <li class="nav-item"><a class="nav-link" href="B&G.html">Blue &amp; Gold Macaw</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Blue &amp; Gold Macaw</a></li>
             <li class="nav-item"><a class="nav-link" href="https://lafeber.com/pet-birds/species/green-winged-macaw/" target="blank">Green Winged Macaw</a></li>
             <li class="nav-item"><a class="nav-link" href="https://lafeber.com/pet-birds/species/hahns-macaw/" target="blank">Hahn's Macaw</a></li>
             <li class="nav-item"><a class="nav-link" href="https://lafeber.com/pet-birds/species/hyacinth-macaw/" target="blank">Hyacinth Macaw</a></li>
